On mobile CopyText and Score will take full screen width instead of fixed width

--- a/components/copy-text.module.css
+++ b/components/copy-text.module.css
@@ -14,3 +14,9 @@
   font-size: .9rem;
   word-break: break-all;
 }
+
+@media only screen and (max-width: 425px) {
+  .container {
+    width: 100%;
+  }
+}
