--- a/pages/score.module.css
+++ b/pages/score.module.css
@@ -91,3 +91,9 @@
     92%
   );
 }
+
+@media only screen and (max-width: 425px) {
+  .container {
+    width: 100%;
+  }
+}
